# s3-store-example

./: .env  .gitignore  README.md  package-lock.json  package.json
data/: analysis.py  pyproject.toml  s3-analysis.ipynb
src/: db.ts
